--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,31 +1,45 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PDF ↔️ Image ↔ OCR</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PDF ↔️ Image ↔ OCR Utility</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="card">
-    <h1>PDF → JPG • OCR • JPG → PNG</h1>
+  <div class="card">
+    <h1>Document Processing Utility</h1>
+    <p class="description">
+      Convert, extract, and transform your documents and images with ease.
+    </p>
 
-    <label>Choose file:
-      <input id="fileInput" type="file" />
-    </label>
-
-    <div class="buttons">
-      <button id="pdfToJpgBtn">PDF → JPG</button>
-      <button id="ocrBtn">Extract Text (OCR)</button>
-      <button id="jpgToPngBtn">JPG → PNG</button>
+    <div class="input-section">
+      <label class="file-label">
+        Choose file to process:
+        <input id="fileInput" type="file" />
+      </label>
     </div>
 
-    <div id="results">
-      <pre id="output"></pre>
-      <div id="images"></div>
-    </div>
-  </div>
+    <div class="buttons">
+      <button id="pdfToJpgBtn" class="action-btn">
+        <span class="icon">📄</span> PDF → JPG
+      </button>
+      <button id="ocrBtn" class="action-btn secondary-btn">
+        <span class="icon">🔍</span> Extract Text (OCR)
+      </button>
+      <button id="jpgToPngBtn" class="action-btn tertiary-btn">
+        <span class="icon">🖼️</span> JPG → PNG
+      </button>
+    </div>
 
-  <script src="script.js"></script>
+    <div class="results-container">
+      <div id="results">
+        <pre id="output">Results will appear here...</pre>
+        <div id="images"></div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
